--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 </head>
 <body>
 
-  <div id="visualization">
+  <div id="chartContainer">
+  </div>
+
+  <div id="visualization" class="rbow2">
   </div>
 
 
@@ -24,14 +27,6 @@
   <script src="http://dimplejs.org/dist/dimple.v2.1.2.min.js"></script>
   <script async src="js/main.js"></script>
 
-  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-  <script>
-  (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-    function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-    e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-    e.src='//www.google-analytics.com/analytics.js';
-    r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-    ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-    </script>
+
   </body>
   </html>
