Improving look of index and cleaning up code in main.js.

--- a/index.html
+++ b/index.html
@@ -10,17 +10,38 @@
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <!-- Place favicon.ico in the root directory -->
 
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+
   <link rel="stylesheet" href="css/main.css">
 
 </head>
 <body>
 
-  <div id="chartContainer">
-  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
 
-  <div id="visualization" class="rbow2">
-  </div>
 
+        <div id="chartContainer">
+        </div>
+
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-12">
+
+      <div id="visualization" class="rbow2">
+      </div>
+
+      <div id="hourHistogram">
+      </div>
+    </div>
+
+
+    </div>
+
+  </div>
 
 
   <script src="http://d3js.org/d3.v3.min.js"></script>
