--- a/index.html
+++ b/index.html
@@ -20,22 +20,38 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
+        <h1 class="text-center">Flight delays</h1>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
 
 
-        <div id="chartContainer">
+        <div id="visualization" class="rbow2">
         </div>
 
       </div>
     </div>
 
-    <div class="row">
-      <div class="col-md-12">
+    <hr>
 
-      <div id="visualization" class="rbow2">
-      </div>
+    <div class="row">
+      <div class="col-md-6">
+
+
 
       <div id="hourHistogram">
       </div>
+    </div>
+    <div class="col-md-6">
+
+
+      <div id="chartContainer">
+      </div>
+
     </div>
 
 
