Added images for visualization evolution. Trying out different data types for 247 visualization. Fixed quirky headers for labels on first visualization that were doing something weird with bootstrap.

--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
 
   <script src="http://d3js.org/d3.v3.min.js"></script>
   <script src="http://dimplejs.org/dist/dimple.v2.1.2.min.js"></script>
+  <script src="js/d3-tip.js"></script>
   <script async src="js/main.js"></script>
 
 
