--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
           </tr>
           <tr>
             <td colspan="5">
-              <p class="pull-left">No or short delay</p>
+              <p class="pull-left">Early or no delay</p>
             </td>
             <td colspan="6" >
-              <p class="pull-right">Up to 69,785 minutes</p>
+              <p class="pull-right">Up to 12,042 minutes</p>
             </td>
           <tr>
         </table>
