Added all of the feedback comments. Included comments to code. Improved axis labes and month labels. Added 2008 to title to clarify.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="row">
       <div class="col-md-12">
 
-        <h2 class="text-center">Departure delay by <b>hour of day</b> and <b>day of week</b> <small>24/7</small></h2>
+        <h2 class="text-center">2008 departure delay by <b>hour of day</b> and <b>day of week</b> <small>24/7</small></h2>
         <p>The data is summed by hour and day of week, which is the total amount of time delay, not the average</p>
         <table class="rbow2">
           <tr>
