Added checklist of to dos to improve visualization, including all feedback from Udacity coach. Made a few basic improvements

--- a/index.html
+++ b/index.html
@@ -21,8 +21,16 @@
       <div class="col-md-12">
         <h1 class="text-center">Do flight delays in the US vary depending on the <b>date</b>?
         </h1>
-        <h1 class="text-center"><small>Month, day of week and hour of day.<small></h1>
+        <h1 class="text-center"><small>Month, day of week and hour of day.</small></h1>
         <!-- <h2>Flight <b>departure delay</b> from all US airports</h2> -->
+      </div>
+    </div>
+
+    <br>
+
+    <div class="row">
+      <div class="col-md-12">
+        <svg id="summary_visualization"></svg>
       </div>
     </div>
 
