Added some comments to index and css. Also did some cleanup in the CSS code.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
     <br>
 
+    <!-- Dashboard visualization. Gives overview of flight data -->
     <div class="row">
       <div class="col-md-12">
         <svg id="summary_visualization"></svg>
