Finished adding comments to index.html and main.css

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <!-- <h2>Flight <b>departure delay</b> from all US airports</h2> -->
       </div>
     </div>
+    <!-- end of row -->
 
     <br>
 
@@ -34,9 +35,15 @@
         <svg id="summary_visualization"></svg>
       </div>
     </div>
+    <!-- end of row -->
 
     <br>
 
+
+    <!--
+    Grid visualization. Depicts three features, departure delays on day of week vs hour of day.
+    It uses a table as base, and there is some HTML element injection via Javascript.
+    -->
     <div class="row">
       <div class="col-md-12">
 
@@ -68,24 +75,23 @@
 
       </div>
     </div>
+    <!-- end of row -->
 
+    <!-- Flight Delays by Hours of Day Bar Graph. -->
     <div class="row">
       <div class="col-md-12">
 
         <div id="visualization" class="rbow2">
         </div>
-
         <br>
-
-
         <p class="lead">The highest delays tend to happen on Monday between 6-9pm</p>
-
-
       </div>
     </div>
+    <!-- end of row -->
 
     <hr>
 
+    <!-- Flight Delays by Years Line Graph. -->
     <div class="row">
       <div class="col-md-6">
 
@@ -104,8 +110,10 @@
 
 
     </div>
+    <!-- end of row -->
 
   </div>
+  <!-- end of container -->
 
   <footer>
     <div class="container">
