All charts now using Average flight delay time! Removed unused data files.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h1 class="text-center">
           <b>If you hate flight delays</b>
         </h1>
-        <p class="text-center lead">book'em between 4am-7am</p>
+        <p class="text-center lead">don't book'em between 12am-3am</p>
       </div>
     </div>
     <!-- end of row -->
@@ -65,10 +65,10 @@
           </tr>
           <tr>
             <td colspan="5">
-              <p class="pull-left">Early or no delay</p>
+              <p class="pull-left">15 minutes</p>
             </td>
             <td colspan="6" >
-              <p class="pull-right">Up to 12,042 minutes</p>
+              <p class="pull-right">80 minutes</p>
             </td>
           <tr>
         </table>
