Improved titles and subtitles. Still should write more story.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h1 class="text-center">
           <b>If you hate flight delays</b>
         </h1>
-        <p class="text-center lead">don't book'em between 12am-3am</p>
+        <p class="text-center lead">don't book flights between 12am-3am</p>
       </div>
     </div>
     <!-- end of row -->
@@ -47,8 +47,10 @@
     <div class="row">
       <div class="col-md-12">
 
-        <h2 class="text-center">2008 departure delay by <b>hour of day</b> and <b>day of week</b> <small>24/7</small></h2>
-        <p>The data is summed by hour and day of week, which is the total amount of time delay, not the average</p>
+        <h2 class="text-center">Average delay by <b>hour of day</b> and <b>day of week</b> <small>24/7</small></h2>
+        <p>The following grid shows how delays depected on the horizontal axis hours of day, and on the vertical axis
+        days of the week.</p>
+
         <table class="rbow2">
           <tr>
             <td class="q1-11 legend-tile"></td>
@@ -84,7 +86,10 @@
         <div id="visualization" class="rbow2">
         </div>
         <br>
-        <p class="lead">The highest delays tend to happen on Monday between 6-9pm</p>
+        <p class="lead">
+          The highest average delays seem to happen between 12am-3am.
+          There seems to be no significant difference in dalays between days of week.
+          </p>
       </div>
     </div>
     <!-- end of row -->
@@ -95,13 +100,13 @@
     <div class="row">
       <div class="col-md-6">
 
-        <h2>Departure delay time (minutes) per hour of day</h2>
+        <h2>Average delays by hour of day</h2>
 
         <div id="hourHistogram">
       </div>
     </div>
     <div class="col-md-6">
-      <h2>Departure delay time (minutes) by month <small>For years 2004-2008</small></h2>
+      <h2>Average delays by month</h2>
 
       <div id="chartContainer">
       </div>
