--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 <body>
 
+  <!-- Title -->
   <div class="container">
     <div class="row">
       <div class="col-md-12">
@@ -38,6 +39,20 @@
     <!-- end of row -->
 
     <br>
+
+    <div class="row">
+      <div class="col-md-8 col-md-offset-2">
+        <h2 class="text-center">Average delays by hour of day</h2>
+        <div id="hourHistogram"></div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-12">
+        <h2>Average delays by month</h2>
+        <div id="chartContainer"></div>
+      </div>
+    </div>
 
 
     <!--
@@ -91,29 +106,6 @@
           There seems to be no significant difference in dalays between days of week.
           </p>
       </div>
-    </div>
-    <!-- end of row -->
-
-    <hr>
-
-    <!-- Flight Delays by Years Line Graph. -->
-    <div class="row">
-      <div class="col-md-6">
-
-        <h2>Average delays by hour of day</h2>
-
-        <div id="hourHistogram">
-      </div>
-    </div>
-    <div class="col-md-6">
-      <h2>Average delays by month</h2>
-
-      <div id="chartContainer">
-      </div>
-
-    </div>
-
-
     </div>
     <!-- end of row -->
 
