--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/main.css">
 
 </head>
@@ -27,7 +27,7 @@
         <p class="lead">
           December clearly stands out as the month with longest average flight delays. So if
           you happen to travel in December and you flight leaves between 11pm and 3am, be
-          <b>mentally prepared</b> to wait around 1 hour.
+          <b>brace yourself</b> to wait around <em>1 hour</em>.
         </p>
       </div>
     </div>
@@ -66,7 +66,7 @@
         <p class="lead">
           December clearly stands out as the month with longest average flight delays. So if
           you happen to travel in December and you flight leaves between 11pm and 3am, be
-          <b>mentally prepared</b> to wait around 1 hour.
+          <b>brace yourself</b> to wait around <em>1 hour</em>.
         </p>
       </div>
     </div>
@@ -157,10 +157,21 @@
   </footer>
 
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+
   <script src="js/d3.v3.min.js"></script>
   <script src="js/dimple.v2.1.2.min.js"></script>
-  <!-- // <script src="js/d3-tip.js"></script> -->
-  <script async src="js/main.js"></script>
+
+  <script src="js/main.js"></script>
+
+  <script>
+  $(function () {
+    $('[data-toggle="tooltip"]').tooltip()
+  })
+  </script>
+
+
 
 
   </body>
