--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <div class="row">
       <div class="col-md-8 col-md-offset-2">
-        <h2 class="text-center">Average delays by hour of day</h2>
+        <h2 class="text-center">Average delays by hour of day <small>minutes</small></h2>
         <div id="hourHistogram"></div>
       </div>
     </div>
@@ -56,7 +56,7 @@
 
     <div class="row">
       <div class="col-md-8 col-md-offset-2">
-        <h2 class="text-center">Average delays by month</h2>
+        <h2 class="text-center">Average delays by month <small>minutes</small></h2>
         <div id="chartContainer"></div>
       </div>
     </div>
