Changed color coding palette of grid graph to be of jut one gradient, to clarify point.

--- a/index.html
+++ b/index.html
@@ -91,24 +91,24 @@
 
         </p>
 
-        <table class="rbow2">
+        <table class="rbow1">
           <tr>
             <th colspan="5">
               Legend: Color spectrum
             </th>
           </tr>
           <tr>
-            <td class="q1-11 legend-tile"></td>
-            <td class="q2-11 legend-tile"></td>
-            <td class="q3-11 legend-tile"></td>
-            <td class="q4-11 legend-tile"></td>
-            <td class="q5-11 legend-tile"></td>
-            <td class="q6-11 legend-tile"></td>
-            <td class="q7-11 legend-tile"></td>
-            <td class="q8-11 legend-tile"></td>
-            <td class="q9-11 legend-tile"></td>
-            <td class="q10-11 legend-tile"></td>
-            <td class="q11-11 legend-tile"></td>
+            <td class="q1-9 legend-tile"></td>
+            <td class="q2-9 legend-tile"></td>
+            <td class="q3-9 legend-tile"></td>
+            <td class="q4-9 legend-tile"></td>
+            <td class="q5-9 legend-tile"></td>
+            <td class="q6-9 legend-tile"></td>
+            <td class="q7-9 legend-tile"></td>
+            <td class="q8-9 legend-tile"></td>
+            <td class="q9-9 legend-tile"></td>
+            <!-- <td class="q10-11 legend-tile"></td>
+            <td class="q11-11 legend-tile"></td> -->
           </tr>
           <tr>
             <td colspan="5">
@@ -128,7 +128,7 @@
     <div class="row">
       <div class="col-md-12">
 
-        <div id="visualization" class="rbow2">
+        <div id="visualization" class="rbow1">
         </div>
         <br>
         <p class="lead">
