--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
 
     <div class="row">
       <div class="col-md-8 col-md-offset-2">
-        <h2 class="text-center">Average delays by hour of day <small>minutes</small></h2>
+        <h2 class="text-center">Average flight delays by hour of day <small>(minutes)</small></h2>
         <div id="hourBar"></div>
+        <p><small>*Note: Red bars indicate delays of more than 40 minutes.</small></p>
       </div>
     </div>
 
@@ -55,41 +56,17 @@
 
     <div class="row">
       <div class="col-md-12">
+        <br>
         <p class="lead">
-          We can clearly perceive the higher time people wait on flights between 11pm and 3am.
-          This naturally leads us to think, is there a relationship for days of the week as well? After exploring the data a bit,
-          there seems to be no clear relationship, all days of the week seem practically identical. No chart
-          was included to show just this relationship. No useful information could be extracted, in the sense of:
-          if you wanted to avoid flight delays, you would have the same expected delay time any day of the week.
-          <small>In the grid visualization below, you can appreciate this fact.</small>
+          Clearly passangers wait longer on flights <em>scheduled</em> to depart from 11pm to 3am. This graph provides
+          a quick overview of the potentially best times to fly during any day of the week. More <b>time conscious
+          passangers</b> may wish to study the following grid.
         </p>
-        <p class="lead">
-          On the other hand, do delays vary between months of year?
-        </p>
+        <br>
       </div>
     </div>
 
     <hr>
-
-    <div class="row">
-      <div class="col-md-8 col-md-offset-2">
-        <h2 class="text-center">Average delays by month <small>minutes</small></h2>
-        <div id="chartContainer"></div>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-md-12">
-        <p class="lead">
-          December clearly stands out as the month with longest average flight delays. So if
-          you happen to travel in December and you flight leaves between 11pm and 3am, be
-          <b>brace yourself</b> to wait around <em>1 hour</em>.
-        </p>
-      </div>
-    </div>
-
-    <hr>
-
 
     <!--
     Grid visualization. Depicts three features, departure delays on day of week vs hour of day.
@@ -99,11 +76,11 @@
       <div class="col-md-12">
 
         <h2 class="text-center">Average delay by <b>hour of day</b> and <b>day of week</b> <small>24/7</small></h2>
-        <p class="lead">
-          The horizontal axis are the hours of day, and on the vertical axis has the
-          days of the week. <b>Lighter blue</b> (e.g. almost white)
-          in the grid represent <em>shorter</em> average delay times <small>(from 15 minutes)</small> and <b>more intense
-          blue</b> (e.g. deep blue) represent <em>longer</em> delay times <small>(up to 75 minutes)</small>.
+        <p class="">
+          The horizontal axis represents the hour of day, and the vertical axis the
+          days of the week. A <em>lighter blue</em> (e.g. almost white) cell
+          in the grid represent <em>shorter</em> average delay times <small>(from 15 minutes)</small> and <em>more intense
+          blue</em> (e.g. deep blue) represent <em>longer</em> delay times <small>(up to 75 minutes)</small>.
 
         </p>
 
@@ -142,20 +119,55 @@
     </div>
     <!-- end of row -->
 
-    <!-- Flight Delays by Hours of Day Bar Graph. -->
+    <!-- Grid visualization -->
     <div class="row">
       <div class="col-md-12">
 
         <div id="visualization" class="rbow1">
         </div>
-        <br>
-        <p class="lead">
-          The highest average delays seem to happen between 12am-3am.
-          There seems to be no significant difference in dalays between days of week.
-          </p>
+
       </div>
     </div>
     <!-- end of row -->
+
+    <hr>
+
+    <div class="row">
+      <div class="col-md-12">
+        <br>
+        <p class="lead">
+          Like the bar chart, here we can see that the highest average delays seem to happen between 12am-3am.
+          <em>There seems to be no significant difference in delays between days of week.</em>
+          So the next question would be: <b>do some months have longer average delays than others?</b>
+        </p>
+        <br>
+      </div>
+    </div>
+
+    <hr>
+
+    <div class="row">
+      <div class="col-md-8 col-md-offset-2">
+        <h2 class="text-center">Average flight delays by month <small>(minutes)</small></h2>
+        <div id="chartContainer"></div>
+        <p><small>*Note: Red dots indicate delays of more than 40 minutes.</small></p>
+      </div>
+    </div>
+
+    <hr>
+
+    <div class="row">
+      <div class="col-md-12">
+        <br>
+        <p class="lead">
+          December clearly stands out as the month with longest average flight delay, over <b>64 minutes</b>. So if
+          you happen to travel in December and you flight leaves between 11pm and 3am, expect to wait around <em>1 hour</em>.
+        </p>
+        <br>
+      </div>
+    </div>
+
+    <hr>
 
   </div>
   <!-- end of container -->
